--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ plugins {
     id 'org.m2ci.msp.flaml' version '0.3.0'
 }
 
+group 'de.dfki.mary'
+version '0.2-SNAPSHOT'
+
 generateFlac {
     srcFiles = fileTree('audio').include('*.wav')
 }
