--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group 'de.dfki.mary'
-version '0.2-SNAPSHOT'
+version '0.2-rc1'
 description 'ENST Camille Voice Data'
 
 generateFlac {
@@ -30,6 +30,7 @@ publishing {
                 builtBy generateFlac
             }
             descriptor {
+                status = 'milestone'
                 license {
                     name = 'Creative Commons Attribution-ShareAlike 4.0 International'
                     url = 'https://creativecommons.org/licenses/by-sa/4.0/'
